# NiPyC_analogues

./: .README.md.swp  .gitignore  .separate_frameworks.jl.swp  .~lock.041921_Manuscript_Second_Edits.docx#  041921_Manuscript_Second_Edits.docx  060221_Manuscript_Min_edits_updated.docx  AA_mofs_to_sim.txt  Cl.xyz  Density_grid_calcs.ipynb  Derivation_of_Henry_Coefficients.ipynb  F.xyz  Functional_group_with_Hxe.ods  IRMOF-1_clean.cssr_bonds.vtk  IRMOF-1_clean_bonds.vtk  MOF_Functionalizer_Module.ipynb  Manifest.toml  NH2.xyz  NiPyC2.cif  NiPyC2.cif.e  NiPyC2.cif_meta_functonalized_Cl_bonds.vtk  NiPyC2.cif_meta_functonalized_NH2_bonds.vtk  NiPyC2.cif_meta_functonalized_OH-CH3.xyz  NiPyC2.cif_meta_functonalized_OH-CH3_bonds.vtk  NiPyC2.cif_ortho_functonalized_CH3_bonds.vtk  NiPyC2.cif_ortho_functonalized_NH2_bonds.vtk  NiPyC2.xyz  NiPyC2_bonds.vtk  NiPyC2_experiment.cif.e  NiPyC2_experiment.vtk  NiPyC2_experiment_sc333.cif  NiPyC2_relax.xyz  NiPyC2_relax_bonds.vtk  NiPyC2_relax_sc211.cif  NiPyC2_relax_sc211_meta_functionalized_CH3_pbesol_relax.vtk  NiPyC2_relax_sc211_meta_functionalized_CH3_pbesol_relax.xyz  NiPyC2_relax_sc211_meta_functionalized_N-C-O_pbesol_relax.xyz  NiPyC2_relax_sc211_meta_functionalized_NH2_pbesol_relax.vtk  NiPyC2_relax_sc211_meta_functionalized_NH2_pbesol_relax.xyz  NiPyC2_supercell.xyz  NiPyC2_vc-relax.xyz  (+47 more)
.ipynb_checkpoints/: Density_grid_calcs-checkpoint.ipynb  Derivation_of_Henry_Coefficients-checkpoint.ipynb  Generate_Plots_in_Paper-checkpoint.ipynb  IAST_selectivity_calc-checkpoint.ipynb  MOF_Functionalizer_Module-checkpoint.ipynb  QE_input_generator-checkpoint.ipynb  QE_output_to_cif-checkpoint.ipynb  convert_lammps_output_file_to_cif_file-checkpoint.ipynb  henry_coefficient_calcs-checkpoint.ipynb  lattice_param_comparison-checkpoint.ipynb  ortho_and_meta_carbon_finder-checkpoint.ipynb  ortho_andmeta_carbon_finder-checkpoint.ipynb  read_cof_xenon_simulation_data_into_dataframe-checkpoint.ipynb
IRMOF-1_clean/: IRMOF-1_clean_meta_functonalized_Br.cif  IRMOF-1_clean_meta_functonalized_Br.xyz  IRMOF-1_clean_meta_functonalized_Br_bonds.vtk  IRMOF-1_clean_meta_functonalized_C-N.cif  IRMOF-1_clean_meta_functonalized_C-N.xyz  IRMOF-1_clean_meta_functonalized_C-N_bonds.vtk  IRMOF-1_clean_meta_functonalized_CH2-CH2-CH3.cif  IRMOF-1_clean_meta_functonalized_CH2-CH2-CH3.xyz  IRMOF-1_clean_meta_functonalized_CH2-CH2-CH3_bonds.vtk  IRMOF-1_clean_meta_functonalized_CH2-CH3.cif  IRMOF-1_clean_meta_functonalized_CH2-CH3.xyz  IRMOF-1_clean_meta_functonalized_CH2-CH3_bonds.vtk  IRMOF-1_clean_meta_functonalized_CH3.cif  IRMOF-1_clean_meta_functonalized_CH3.xyz  IRMOF-1_clean_meta_functonalized_CH3_bonds.vtk  IRMOF-1_clean_meta_functonalized_Cl.cif  IRMOF-1_clean_meta_functonalized_Cl.xyz  IRMOF-1_clean_meta_functonalized_Cl_bonds.vtk  IRMOF-1_clean_meta_functonalized_F.cif  IRMOF-1_clean_meta_functonalized_F.xyz  IRMOF-1_clean_meta_functonalized_F_bonds.vtk  IRMOF-1_clean_meta_functonalized_N-NH.cif  IRMOF-1_clean_meta_functonalized_N-NH.xyz  IRMOF-1_clean_meta_functonalized_N-NH_bonds.vtk  IRMOF-1_clean_meta_functonalized_NH2.cif  IRMOF-1_clean_meta_functonalized_NH2.xyz  IRMOF-1_clean_meta_functonalized_NH2_bonds.vtk  IRMOF-1_clean_meta_functonalized_O-CH2-CH2-CH3.cif  IRMOF-1_clean_meta_functonalized_O-CH2-CH2-CH3.xyz  (+51 more)
MOFun/: MOFun.jl  (+3 more)
lammps_diffusion_calcs/sample_and_similar_examples/tcf_normal/: ._CMakeLists.txt  CMakeLists.txt
lammps_diffusion_calcs/sample_and_similar_examples/tcf_normal/cmake/: DefineCompilerFlags.cmake  FindCheck.cmake
lammps_diffusion_calcs/sample_and_similar_examples/tcf_normal/python/: solve_msd
lammps_diffusion_calcs/sample_and_similar_examples/tcf_normal/source/: CMakeLists.txt  main.c  readinput.h
(+10925 files in other folders)
